--- a/homework_foodblog.html
+++ b/homework_foodblog.html
@@ -74,6 +74,46 @@
         border: 2px solid rgba(83, 78, 58, 0.6);
         border-radius: 0.5em;
       }
+
+      .profile-pic {
+        width: 50px;
+        /* height: 50px; */
+        cursor: pointer;
+      }
+
+      .floating-box {
+        position: absolute;
+        background: rgba(0, 0, 0, 0.8);
+        color: white;
+        padding: 15px;
+        border-radius: 8px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 250px;
+      }
+
+      .close-btn {
+        float: right;
+        cursor: pointer;
+      }
+
+      .comment-header {
+        display: flex;
+        align-items: center; /* Vertically center items */
+        gap: 10px; /* Space between profile picture and text */
+      }
+
+      .bio-header {
+        font-size: larger;
+        font-weight: bold;
+      }
+
+      .bio {
+        margin-top: -16px;
+        margin-bottom: 30px;
+      }
+
       footer {
         position: absolute;
         bottom: 0;
@@ -107,6 +147,9 @@
             :author="comment.author"
             :date="comment.date"
             :content="comment.content"
+            :profile="comment.profile"
+            :foodieLevel="comment.foodieLevel"
+            :bio="comment.bio"
           >
           </comment-component>
         </section>
