--- a/homework_foodblog.html
+++ b/homework_foodblog.html
@@ -148,7 +148,7 @@
             :date="comment.date"
             :content="comment.content"
             :profile="comment.profile"
-            :foodieLevel="comment.foodieLevel"
+            :lvl="comment.lvl"
             :bio="comment.bio"
           >
           </comment-component>
