--- a/homework_foodblog.html
+++ b/homework_foodblog.html
@@ -44,7 +44,8 @@
         padding: 0.5em;
         color: rgb(216, 150, 7);
       }
-      header span {
+      header span,
+      header a {
         font-family: "Sacramento", cursive;
       }
       main {
@@ -121,6 +122,43 @@
         width: 100%;
         text-align: center;
         font-size: 0.85em;
+      }
+
+      /* Nav */
+      .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #fff;
+        padding: 10px 20px;
+        border-bottom: 2px solid #ddd;
+      }
+
+      .logo {
+        /* font-size: 24px; */
+        font-weight: bold;
+      }
+
+      .nav-links {
+        list-style: none;
+        display: flex;
+        gap: 30px;
+        margin: 0;
+        padding: 0;
+        font-size: 30px;
+      }
+
+      .nav-links li {
+        display: inline;
+      }
+
+      .nav-links a {
+        text-decoration: none;
+        font-weight: bold;
+      }
+
+      .nav-links a:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
