--- a/homework_foodblog.html
+++ b/homework_foodblog.html
@@ -11,15 +11,23 @@
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <aside id="leftside"></aside>
-    <aside id="rightside"></aside>
-    <div id="container">
+    <aside id="leftside" class="float-left"></aside>
+    <aside id="rightside" class="float-left position-relative"></aside>
+    <div id="container" class="position-absolute">
       <header-component></header-component>
 
-      <main>
+      <main class="position-relative">
         <aside id="photos">
           <photo-component
             :src="'images/chili.jpg'"
@@ -27,7 +35,8 @@
           ></photo-component>
         </aside>
 
-        <h2>Comments</h2>
+        <!-- <h2>Comments</h2> -->
+        <h2 class="text-uppercase position-absolute mt-4 ml-5">Comments</h2>
 
         <section id="blogposts">
           <comment-component
@@ -45,5 +54,11 @@
       </main>
       <footer>&copy; Copyright FOOD BLOG</footer>
     </div>
+    <!-- Bootstrap jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Bootstrap Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
